--- a/public/coming-soon.html
+++ b/public/coming-soon.html
@@ -21,8 +21,8 @@
       <div class="home-container">
         <div class="home-content">
           <img src="static/logos/cup-white.png" alt="Coffee Cup">
-          <h1>Digital Espresso</h1>
-          <h2>Your desired digital cafe</h2>
+          <h1>Coming Soon</h1>
+          <h2>Please wait for this coffee to brew.</h2>
         </div>
       </div>
       <nav class="home-nav">
