--- a/public/products.html
+++ b/public/products.html
@@ -23,11 +23,11 @@
                 </div>
                 <div class="nav-menu">
                     <ul class="nav-items">
-                      <li class="nav-item"><a href="./index.html" class="nav-link">Home</a></li>
-                      <li class="nav-item"><a href="" class="nav-link">About</a></li>
-                      <li class="nav-item"><a href="./products.html" class="nav-link">Products</a></li>
-                      <li class="nav-item"><a href="" class="nav-link">Branches</a></li>
-                      <li class="nav-item"><a href="" class="nav-link">Subscribe</a></li>
+                        <li class="nav-item"><a href="./index.html" class="nav-link">Home</a></li>
+                        <li class="nav-item"><a href="./coming-soon.html" class="nav-link">About</a></li>
+                        <li class="nav-item"><a href="./products.html" class="nav-link">Products</a></li>
+                        <li class="nav-item"><a href="./coming-soon.html" class="nav-link">Branches</a></li>
+                        <li class="nav-item"><a href="./coming-soon.html" class="nav-link">Subscribe</a></li>
                     </ul>
                   </div>
             </nav>
@@ -36,52 +36,53 @@
 
         <section class="products-list">
             <div class="products-container">
+                <h1>Our Products</h1>
                 <div class="products-wrapper">
-                    <a href="./index.html"><div class="product-card" id="espresso">
+                    <a href="./products/espresso.html"><div class="product-card" id="espresso">
                         <div class="product-content">
                             <h1>Espresso</h1>
                             <p>₱100.00</p>
                         </div>
                     </div></a>
-                    <a href="./index.html"><div class="product-card" id="macchiato">
+                    <a href="./products/macchiato.html"><div class="product-card" id="macchiato">
                         <div class="product-content">
                             <h1>Macchiato</h1>
                             <p>₱100.00</p>
                         </div>
                     </div></a>
-                    <a href="./index.html"><div class="product-card" id="latte">
+                    <a href="./products/latte.html"><div class="product-card" id="latte">
                         <div class="product-content">
                             <h1>Latte</h1>
                             <p>₱125.00</p>
                         </div>
                     </div></a>
-                    <a href="./index.html"><div class="product-card" id="flat-white">
+                    <a href="./products/flat-white.html"><div class="product-card" id="flat-white">
                         <div class="product-content">
                             <h1>Flat White</h1>
                             <p>₱125.00</p>
                         </div>
                     </div></a>
-                    <a href="./index.html"><div class="product-card" id="cappucino">
+                    <a href="./products/cappucino.html"><div class="product-card" id="cappucino">
                         <div class="product-content">
                             <h1>Cappucino</h1>
                             <p>₱125.00</p>
                         </div>
                     </div></a>
-                    <a href="./index.html"><div class="product-card" id="mocha">
+                    <a href="./products/mocha.html"><div class="product-card" id="mocha">
                         <div class="product-content">
                             <h1>Mocha</h1>
                             <p>₱140.00</p>
                         </div>
                     </div></a>
-                    <a href="./index.html"><div class="product-card" id="americano">
+                    <a href="./products/americano.html"><div class="product-card" id="americano">
                         <div class="product-content">
                             <h1>Americano</h1>
                             <p>₱115.00</p>
                         </div>
                     </div></a>
-                    <a href="./index.html"><div class="product-card" id="con-pannas">
+                    <a href="./products/con-panna.html"><div class="product-card" id="con-panna">
                         <div class="product-content">
-                            <h1>Con Pannas</h1>
+                            <h1>Con Panna</h1>
                             <p>₱115.00</p>
                         </div>
                     </div></a>
@@ -98,10 +99,10 @@
               <div class="footer-links">
                 <ul class="footer-items">
                   <li class="footer-item"><a href="./index.html" class="footer-link">Home</a></li>
-                  <li class="footer-item"><a href="" class="footer-link">About</a></li>
+                  <li class="footer-item"><a href="./coming-soon.html" class="footer-link">About</a></li>
                   <li class="footer-item"><a href="./products.html" class="footer-link">Products</a></li>
-                  <li class="footer-item"><a href="" class="footer-link">Branches</a></li>
-                  <li class="footer-item"><a href="" class="footer-link">Subscribe</a></li>
+                  <li class="footer-item"><a href="./coming-soon.html" class="footer-link">Branches</a></li>
+                  <li class="footer-item"><a href="./coming-soon.html" class="footer-link">Subscribe</a></li>
                 </ul>
               </div>
             </div>
